@startuml

title Mastermind - Public interface class diagram
package mastermind{

    class Mastermind {
        +play()
        +{static} main()
    }
}
    
package mastermind.models {
    Mastermind *-- Game
    
    class Game {
        +initialize()
        +saveAttempt()
        +getAttemptsCount()
        +getAttempts()
        +isFinished()
        +playerWins()
    }
    Game *-- SecretCombination
    Game *-- Player
    
    class Combination{
        +contains(Color): Boolean
        +getSize(): int
        #setColor(int, Color)
        +getColor(i): Color
        +getColors(): Color[]
    }
    Combination *-- "4" Color
    Combination <|-- SecretCombination
    
    class ProposedCombination{
        +{static}getChecker(String combination): MastermindCombinationChecker
    }
    Combination <|-- ProposedCombination
    ProposedCombination ..> MastermindCombinationChecker
    
    class Attempt {
        +getProposedCombination()
        +getBlacks()
        +getWhites()
    }
    Attempt *-- ProposedCombination
    Attempt *-- Result
    
    class Result {
        getBlacks()
        getWhites()
    }
    
    class Player {
        +saveAttempt()
        +getLastAttempt(): Attempt
        +getAttempt(int): Attempt
        +getAttempts(): Attempt[]
    }
    Player *-- "0..10"Attempt
    
    Enum Color {
        Red
        Blue
        Yellow
        Green
        Orange
        Purple
        +getInitial()
        +{static}valueOf(char letter): Color
        +{static}getInitials(Color[]): String
        +{static}getInitials(): String
        +{static}getColorsArray(String): Color[]
    }
    
    class MastermindCombinationChecker{
        +isValid()
        +hasValidLength()
        +hasValidColors()
    }
    
}

package mastermind.views {
    Mastermind *-- GameView
    
    abstract class View {
        +{abstract}interact()
    }
    View <|-- GameView
    View <|-- PlayView
    View <|-- AttemptView
    
    class GameView{}
    GameView *-- PlayView
    GameView *-- ResumeView
    
    class PlayView{}
    PlayView *-- AttemptView
    
    class AttemptView{}
    AttemptView *-- ProposedCombinationView
    AttemptView *-- SecretCombinationView
    
    class ProposedCombinationView{
        +read()
    }
    ProposedCombinationView ..> MastermindCombinationChecker
    
    class SecretCombinationView{
        +write()
    }
    
    class ResumeView{
        +read()
    }
    
    enum Message{
        +getMessage()
        +getFormattedMessage()
    }
    Message <.. ProposedCombinationView
    Message <.. View
    
    
}

package utils {
    class Console {
        +{static}getInstance()
        +getString()
        +printEmptyLine()
        +print()
    }
    Console <.. View
    Console <.. ProposedCombinationView
    Console <.. SecretCombinationView
    Console <.. ResumeView
    
    class CombinationChecker {
        +hasValidLength(int validLength)
        +hasValidValues(T[] validValues)
        +hasDuplicates()
    }
    CombinationChecker <|-- MastermindCombinationChecker
@enduml
